fix vertical spacing between text and step symbol

--- a/src/components/step_by_step/step_by_step.scss
+++ b/src/components/step_by_step/step_by_step.scss
@@ -51,13 +51,19 @@
 
     display: inline;
     position: relative;
-    margin-left: 2.5em;
     top: 0.25em;
+    margin-left: calc(2em + 12px);
+    @include breakpoints.large {
+        margin-left: calc(2em + 16px);
+      }
   }
 
   &__text {
     @extend %ods-margin-top-4;
 
-    margin-left: 2.5em;
+    margin-left: calc(2em + 12px);
+    @include breakpoints.large {
+        margin-left: calc(2em + 16px);
+      }
   }
 }
